--- a/its_lit/static/main.html
+++ b/its_lit/static/main.html
@@ -37,7 +37,7 @@
                 <br>
                 <div>
                     <form action="profile.html">
-                        <button class="btn btn-primary">Edit profile</button>
+                        <button class="btn btn-primary">Main menu</button>
                     </form>
                 </div>
             </div>
